--- a/twistranet/themes/twistheme/static/css/content.css
+++ b/twistranet/themes/twistheme/static/css/content.css
@@ -17,7 +17,7 @@
 }
 
 .activepost {
-  background-color: #f7f7f7;
+  background-color: #fafafa;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
