--- a/twistranet/twistapp/templates/content/thumbnail.link.part.html
+++ b/twistranet/twistapp/templates/content/thumbnail.link.part.html
@@ -2,7 +2,7 @@
 {#     content: the content (or twistable) object for which this link is generated; #}
 {#     thumbnail: the thumbnail from twistranet.thumbnails[xxx] #}
   <a title="{{content.title}}"
-     href="{{ content.get_absolute_url }}"
+     href="{{ content.file.get_absolute_url }}"
      class="image-block image-block-thumb image-block-content{% if content.file %}{% if content.file.is_image %} image-block-contentimage{% endif %}{% endif %}">
     <img title="{{content.title}}"
          alt="{{content.title}}"
