--- a/twistranet/twistapp/templates/actions/content_summary.part.html
+++ b/twistranet/twistapp/templates/actions/content_summary.part.html
@@ -9,12 +9,15 @@
         <li>
             <a href="{% url delete_content content.id %}" 
                class="icon-delete confirmbefore"
+               rel="deleteContent"
                title="{% trans 'Delete content' %}">
               <span></span>
               {# <!-- because the link has class 'confirmbefore' we can use a specific confirm message --> #}
               {% with content.title as title%}
                     {% if title %}
                       <span class="confirm-message">{% blocktrans %}Do you really want to delete '{{ title }}'?{% endblocktrans %}</span>
+                    {% else %}
+                      <span class="confirm-message">{% blocktrans %}Do you really want to delete this?{% endblocktrans %}</span>
                     {% endif %}
               {% endwith %}
             </a>
