minor css fix for tinymce resource browser

--- a/twistranet/themes/twistheme/templates/popup.html
+++ b/twistranet/themes/twistheme/templates/popup.html
@@ -52,6 +52,9 @@
       #resources-selector {
         clear: none;
       }
+      .qq-upload-drop-area {
+        max-width: 59% !important;
+      }
       #wrapper {
         width: 100%
       }
