--- a/twistranet/twistapp/templates/content/summary.part.html
+++ b/twistranet/twistapp/templates/content/summary.part.html
@@ -37,14 +37,16 @@
                 {% endif %}
             </span>
         </div>
-        <div class="public-actions">
-            <ul class="comment-actions">
-              {% include 'content/summary.comments.part.html' %}
-            </ul>
-            <ul class="sharing-actions">
-              {% include 'sharing/summary.part.html' %}
-            </ul>
-        </div>
+        {% if content.model_name != 'Comment' %}
+            <div class="public-actions">
+                <ul class="comment-actions">
+                  {% include 'content/summary.comments.part.html' %}
+                </ul>
+                <ul class="sharing-actions">
+                  {% include 'sharing/summary.part.html' %}
+                </ul>
+            </div>
+        {% endif %}
         <div class="postmetadata">
             <ul>
                 {% if not content.owner_for_display == content.owner %}
