--- a/twistranet/twistapp/templates/content/comment.single.part.html
+++ b/twistranet/twistapp/templates/content/comment.single.part.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <span class="headline">
-                {{ content.title_or_description|fullwiki }}
+                {{ content.title_or_description|wiki }}
             </span>
         </div>
         <div class="postmetadata">
