--- a/twistranet/tagging/templates/tags/view.html
+++ b/twistranet/tagging/templates/tags/view.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content-summary">
-        {{ tag.description|safe|fullwiki }}
+        {{ tag.description|fullwiki }}
     </div>
 
     {% for result in page.object_list %}
