fix special chars returning errors using gettext (localization)

--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -12,7 +12,7 @@
       {% comment%}
       <!-- Uncomment in future to work on multiple menus edition -->
       <div class="nav-tabs-nav">
-        <div class="nav-tabs-arrow nav-tabs-arrow-left" style="display: none;"><a>«</a></div>
+        <div class="nav-tabs-arrow nav-tabs-arrow-left" style="display: none;"><a>&laquo;</a></div>
         <div class="nav-tabs-wrapper">
           {% for menu in topmenus %}
             <span class="nav-tab nav-tab-active">{{ menu.label }}</span>
@@ -22,7 +22,7 @@
              <abbr title="Add a menu">+</abbr>
           </a>
         </div>
-        <div class="nav-tabs-arrow nav-tabs-arrow-right" style="display: none;"><a>»</a></div>
+        <div class="nav-tabs-arrow nav-tabs-arrow-right" style="display: none;"><a>&raquo;</a></div>
       </div>
       {% endcomment%}
       <div id="menu_edit_left">
