--- a/twistranet/themes/twistheme/static/css/content.css
+++ b/twistranet/themes/twistheme/static/css/content.css
@@ -255,8 +255,8 @@
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
     padding: 7px 10px !important;
     position: absolute;
-    top: -1px;
-    left: 0;
+    top: -5px;
+    left: -5px;
     z-index: 100;
     width: 200px;
 }
