--- a/twistranet/twistapp/templates/wall.html
+++ b/twistranet/twistapp/templates/wall.html
@@ -24,7 +24,11 @@
         {% include "content/content_forms.part.html" %}
     {% endif %}
 
-    {% include "wall.content.part.html" %}
+    {% if latest_content_list %}
+      {% include "wall.content.part.html" %}
+    {% else %}
+      <p>{% blocktrans %}No content.{% endblocktrans %}</p>
+    {% endif %}
 
 {% endblock %}
 
