ajax walls in limit use cases : - when there is no content in community, - when there were an old portal message,

--- a/twistranet/twistapp/templates/account/view.html
+++ b/twistranet/twistapp/templates/account/view.html
@@ -11,6 +11,6 @@
     {% if latest_content_list %}
       {% include "wall.content.part.html" %}
     {% else %}
-      <p>{% blocktrans %}No content.{% endblocktrans %}</p>
+      <p class="nocontent">{% blocktrans %}No content.{% endblocktrans %}</p>
     {% endif %}
 {% endblock %}
