--- a/twistranet/twistapp/templates/community/view.html
+++ b/twistranet/twistapp/templates/community/view.html
@@ -19,7 +19,7 @@
     {% if latest_content_list %}
       {% include "wall.content.part.html" %}
     {% else %}
-      <p>{% blocktrans %}No content.{% endblocktrans %}</p>
+      <p class="nocontent">{% blocktrans %}No content.{% endblocktrans %}</p>
     {% endif %}
 
 {% endblock %}
