message "start of the wall" changed + translation

--- a/twistranet/twistapp/templates/wall.content.part.html
+++ b/twistranet/twistapp/templates/wall.content.part.html
@@ -10,7 +10,7 @@
     </div>
 {% else %}
     <div id="bottom-navigation-bar">
-        <span class="veryBeginning">{% blocktrans %}It was the very beginning of this wall{% endblocktrans %}</span>
+        <span class="veryBeginning">{% blocktrans %}Very beginning of this wall's history.{% endblocktrans %}</span>
     </div>
 {% endif %}
 
