Don't show batch bar when list of posts is < batch_size

--- a/twistranet/twistapp/templates/wall.content.part.html
+++ b/twistranet/twistapp/templates/wall.content.part.html
@@ -4,10 +4,12 @@
     {% for content in latest_content_list %}
         {%include content.summary_view %}
     {% endfor %}
-    <div id="bottom-navigation-bar">
-        <a class="olderPosts"
-           href="{{current_url}}?page={{nextpage}}">{% blocktrans %}Older posts{% endblocktrans %}</a>
-    </div>
+    {% if nextpage %}
+        <div id="bottom-navigation-bar">
+            <a class="olderPosts"
+               href="{{current_url}}?page={{nextpage}}">{% blocktrans %}Older posts{% endblocktrans %}</a>
+        </div>
+    {% endif %}
 {% else %}
     <div id="bottom-navigation-bar">
         <span class="veryBeginning">{% blocktrans %}Very beginning of this wall's history.{% endblocktrans %}</span>
