--- a/twistranet/themes/twistheme/templates/base.html
+++ b/twistranet/themes/twistheme/templates/base.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load wiki %}
+{% load compressed %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -10,32 +11,16 @@
 
     <link rel="icon" type="image/png" href="{% url twistranet_home %}static/images/favicon.png" />
     <meta name="generator" content="twistranet" />
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/style.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/login.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/forms.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/content.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" />      
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/jquery-dd.css" type="text/css" media="screen" /> 
-    <link rel="stylesheet" href="{% url twistranet_home %}static/css/fileuploader.css" type="text/css" media="screen" />
+    {% compressed_css 'twist_theme' %}
+    {% compressed_css 'twist_tools' %}
     {% block local_css %}{% endblock %}
     <!--[if lte IE 7]><style type="text/css" media="all">@import url({% url twistranet_home %}static/css/ie7.css);</style><![endif]-->
     <!--[if lte IE 9]><style type="text/css" media="all">@import url({% url twistranet_home %}static/css/ie.css);</style><![endif]-->
     <script type="text/javascript" src="{% url twistranet_home %}static/js/jquery.js" charset="utf-8"></script>
     <script type="text/javascript" src="{% url twistranet_js_vars %}" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/includes/lib/include.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/includes/lib/scrollTo.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/includes/lib/browserdetect.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/includes/lib/hoverIntent.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/includes/lib/superfish.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/includes/mad.jquery.js" charset="utf-8"></script> 
     <script type="text/javascript" src="{% url twistranet_home %}static/js/jquery-ui-1.8.10.custom.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/jquery.livesearch.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/jquery.dd.js" charset="utf-8"></script>      
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/fileuploader.js" charset="utf-8"></script>  
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/tn_quickupload_helpers.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/comments.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/sharing.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/tn.js" charset="utf-8"></script>
+    <script type="text/javascript" src="{% url twistranet_home %}static/js/jquery.dd.js" charset="utf-8"></script>
+    {% compressed_js 'twist_all' %}
     {% block local_js %}{% endblock %}
     {% if form %}{{ form.media }}{% endif %}
     {% block local_headers %}{% endblock %}
